# factorio-manager

./: .gitignore  Dockerfile  Dockerfile_client  README.md  client.py  docker-entrypoint.sh  flake.nix  main.py  pyproject.toml  server.py
.github/workflows/: docker.yml  main.yml
facmgr/client/: __init__.py  __main__.py  grpc_methods.py
facmgr/client/bot/: filters.py  handlers.py  replies.py  reply_template.json  utils.py
facmgr/protobuf/: error_code.py  facmgr.proto  facmgr_pb2.py  facmgr_pb2.pyi  facmgr_pb2_grpc.py
facmgr/server/: __init__.py  __main__.py  grpc_methods.py  server.py
facmgr/server/daemon/: __init__.py  daemon.py  monitor.py
facmgr/server/save_explorer/: __init__.py  explorer.py  parser.py  uploader.py
grpc_client/: grpc_methods.py  server.proto  server_pb2.py  server_pb2.pyi  server_pb2_grpc.py
grpc_client/bot/: __init__.py  config.py  filters.py  handlers.py  replies.py  reply_template.json  topic_patch.py  utils.py
grpc_server/: grpc_methods.py  server.proto  server.py  server_pb2.py  server_pb2.pyi  server_pb2_grpc.py
grpc_server/daemon/: daemon.py  monitor.py
grpc_server/save_explorer/: __init__.py  explorer.py  parser.py
nix/: module.nix
tests/: test_daemon.py
